--- a/assets/css/a-design.css
+++ b/assets/css/a-design.css
@@ -2,7 +2,8 @@ section{
 	margin-bottom:15px;
 }
 .harga h1{
-	font-size:8em;
+	font-size:6em;
+	margin-bottom:20px;
 }
 .harga small{
 	vertical-align:top;
